gccida/c3/function_cannot_inline_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/function_cannot_inline_p/src/integrate.c:648:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/function_cannot_inline_p/src/integrate.c:679:47: error: use of undeclared identifier 'unk_716108'
if ( !v2 || ( cannot_inline = ( const char *)&unk_716108, v2->int_cst.int_cst.low == *( &global_trees + 27)) ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/function_cannot_inline_p/src/integrate.c:682:33: error: use of undeclared identifier 'unk_716108'
cannot_inline = ( const char *)&unk_716108; 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/function_cannot_inline_p/src/integrate.c:693:24: error: use of undeclared identifier 'unk_716178'
return ( const char *)&unk_716178; 
                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/function_cannot_inline_p/src/obj/integrate.o] Error 1
